crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/function_value/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 5462] Error: Invalid array length, expected integer literal or constant expression.
   ╭─[input.sol:7:13]
   │
 7 │     uint256[f] a;
   │             ┬  
   │             ╰── Error occurred here.
───╯
